Update style for source code listings

--- a/content/css/main.css
+++ b/content/css/main.css
@@ -1467,10 +1467,304 @@ span.nav-text { color: #425563; font-size: 1.2rem; line-height: 1.2rem; }
 /* line 178, ../sass/elements/_search.scss */
 #search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li.selected > div a > span.label { background-color: #2983fb; }
 
-/* line 1, ../sass/elements/_source-highlighting.scss */
+/* line 1, ../sass/elements/_coderay-theme.scss */
+.CodeRay { background-color: rgba(235, 235, 235, 0.5); border: 2px solid #d0d3d4; color: black; }
+
+/* line 6, ../sass/elements/_coderay-theme.scss */
+.CodeRay pre { margin: 0px; }
+
+/* line 10, ../sass/elements/_coderay-theme.scss */
+span.CodeRay { white-space: pre; border: 0px; padding: 2px; }
+
+/* line 11, ../sass/elements/_coderay-theme.scss */
+table.CodeRay { border-collapse: collapse; width: 100%; padding: 2px; }
+
+/* line 12, ../sass/elements/_coderay-theme.scss */
+table.CodeRay td { padding: 2px 4px; vertical-align: top; }
+
+/* line 13, ../sass/elements/_coderay-theme.scss */
+.CodeRay .line-numbers { background-color: #ebebeb; color: #425563; text-align: right; -webkit-user-select: none; -moz-user-select: none; user-select: none; }
+
+/* line 21, ../sass/elements/_coderay-theme.scss */
+.CodeRay .line-numbers a { background-color: #ebebeb !important; color: #425563 !important; text-decoration: none !important; }
+
+/* line 26, ../sass/elements/_coderay-theme.scss */
+.CodeRay .line-numbers pre { word-break: normal; }
+
+/* line 29, ../sass/elements/_coderay-theme.scss */
+.CodeRay .line-numbers a:target { color: blue !important; }
+
+/* line 30, ../sass/elements/_coderay-theme.scss */
+.CodeRay .line-numbers .highlighted { color: red !important; }
+
+/* line 31, ../sass/elements/_coderay-theme.scss */
+.CodeRay .line-numbers .highlighted a { color: red !important; }
+
+/* line 32, ../sass/elements/_coderay-theme.scss */
+.CodeRay span.line-numbers { padding: 0px 4px; }
+
+/* line 33, ../sass/elements/_coderay-theme.scss */
+.CodeRay .line { display: block; float: left; width: 100%; }
+
+/* line 34, ../sass/elements/_coderay-theme.scss */
+.CodeRay .code { width: 100%; }
+
+/* line 37, ../sass/elements/_coderay-theme.scss */
+.debug { color: white !important; background: blue !important; }
+
+/* line 38, ../sass/elements/_coderay-theme.scss */
+.annotation { color: #000077; }
+
+/* line 39, ../sass/elements/_coderay-theme.scss */
+.attribute-name { color: #a77bca; }
+
+/* line 40, ../sass/elements/_coderay-theme.scss */
+.attribute-value { color: #a77bca; }
+
+/* line 41, ../sass/elements/_coderay-theme.scss */
+.binary { color: #554499; }
+
+/* line 42, ../sass/elements/_coderay-theme.scss */
+.binary .char { color: #332255; }
+
+/* line 43, ../sass/elements/_coderay-theme.scss */
+.binary .delimiter { color: #332255; }
+
+/* line 44, ../sass/elements/_coderay-theme.scss */
+.char { color: #dd2200; }
+
+/* line 45, ../sass/elements/_coderay-theme.scss */
+.char .content { color: #dd2200; }
+
+/* line 46, ../sass/elements/_coderay-theme.scss */
+.char .delimiter { color: #771100; }
+
+/* line 47, ../sass/elements/_coderay-theme.scss */
+.class { color: #B06; font-weight: bold; }
+
+/* line 48, ../sass/elements/_coderay-theme.scss */
+.class-variable { color: #336699; }
+
+/* line 49, ../sass/elements/_coderay-theme.scss */
+.color { color: #00aa00; }
+
+/* line 50, ../sass/elements/_coderay-theme.scss */
+.comment { color: #777777; }
+
+/* line 51, ../sass/elements/_coderay-theme.scss */
+.comment .char { color: #444444; }
+
+/* line 52, ../sass/elements/_coderay-theme.scss */
+.comment .delimiter { color: #444444; }
+
+/* line 53, ../sass/elements/_coderay-theme.scss */
+.constant { color: #036; font-weight: bold; }
+
+/* line 54, ../sass/elements/_coderay-theme.scss */
+.decorator { color: #bb00bb; }
+
+/* line 55, ../sass/elements/_coderay-theme.scss */
+.definition { color: #099; font-weight: bold; }
+
+/* line 56, ../sass/elements/_coderay-theme.scss */
+.delimiter { color: black; }
+
+/* line 57, ../sass/elements/_coderay-theme.scss */
+.directive { color: #088; font-weight: bold; }
+
+/* line 58, ../sass/elements/_coderay-theme.scss */
+.docstring { color: #D42; }
+
+/* line 59, ../sass/elements/_coderay-theme.scss */
+.doctype { color: #3344bb; }
+
+/* line 60, ../sass/elements/_coderay-theme.scss */
+.done { text-decoration: line-through; color: gray; }
+
+/* line 61, ../sass/elements/_coderay-theme.scss */
+.entity { color: #800; font-weight: bold; }
+
+/* line 62, ../sass/elements/_coderay-theme.scss */
+.error { color: #F00; background-color: #ffaaaa; }
+
+/* line 63, ../sass/elements/_coderay-theme.scss */
+.escape { color: #666666; }
+
+/* line 64, ../sass/elements/_coderay-theme.scss */
+.exception { color: #C00; font-weight: bold; }
+
+/* line 65, ../sass/elements/_coderay-theme.scss */
+.float { color: #6600ee; }
+
+/* line 66, ../sass/elements/_coderay-theme.scss */
+.function { color: #06B; font-weight: bold; }
+
+/* line 67, ../sass/elements/_coderay-theme.scss */
+.function .delimiter { color: #005599; }
+
+/* line 68, ../sass/elements/_coderay-theme.scss */
+.function .content { color: #003377; }
+
+/* line 69, ../sass/elements/_coderay-theme.scss */
+.global-variable { color: #dd7700; }
+
+/* line 70, ../sass/elements/_coderay-theme.scss */
+.hex { color: #0022bb; }
+
+/* line 71, ../sass/elements/_coderay-theme.scss */
+.id { color: #33D; font-weight: bold; }
+
+/* line 72, ../sass/elements/_coderay-theme.scss */
+.include { color: #B44; font-weight: bold; }
+
+/* line 74, ../sass/elements/_coderay-theme.scss */
+.inline-delimiter { font-weight: bold; color: #666666; }
+
+/* line 75, ../sass/elements/_coderay-theme.scss */
+.instance-variable { color: #3333bb; }
+
+/* line 76, ../sass/elements/_coderay-theme.scss */
+.integer { color: #00cca0; }
+
+/* line 77, ../sass/elements/_coderay-theme.scss */
+.imaginary { color: red; }
+
+/* line 78, ../sass/elements/_coderay-theme.scss */
+.important { color: #dd0000; }
+
+/* line 79, ../sass/elements/_coderay-theme.scss */
+.key { color: #2983fb; font-weight: bold; }
+
+/* line 80, ../sass/elements/_coderay-theme.scss */
+.key .char { color: #2983fb; }
+
+/* line 81, ../sass/elements/_coderay-theme.scss */
+.key .delimiter { color: #2983fb; }
+
+/* line 82, ../sass/elements/_coderay-theme.scss */
+.keyword { color: #080; font-weight: bold; }
+
+/* line 83, ../sass/elements/_coderay-theme.scss */
+.label { color: #970; font-weight: bold; }
+
+/* line 84, ../sass/elements/_coderay-theme.scss */
+.local-variable { color: #995500; }
+
+/* line 85, ../sass/elements/_coderay-theme.scss */
+.map .content { color: #880088; }
+
+/* line 86, ../sass/elements/_coderay-theme.scss */
+.map .delimiter { color: #40A; }
+
+/* line 88, ../sass/elements/_coderay-theme.scss */
+.namespace { color: #707; font-weight: bold; }
+
+/* line 89, ../sass/elements/_coderay-theme.scss */
+.octal { color: #4400ee; }
+
+/* line 91, ../sass/elements/_coderay-theme.scss */
+.predefined { color: #369; font-weight: bold; }
+
+/* line 92, ../sass/elements/_coderay-theme.scss */
+.predefined-constant { color: #006699; }
+
+/* line 93, ../sass/elements/_coderay-theme.scss */
+.predefined-type { color: #0a8; font-weight: bold; }
+
+/* line 94, ../sass/elements/_coderay-theme.scss */
+.preprocessor { color: #557799; }
+
+/* line 95, ../sass/elements/_coderay-theme.scss */
+.pseudo-class { color: #00C; font-weight: bold; }
+
+/* line 97, ../sass/elements/_coderay-theme.scss */
+.regexp .content { color: #880088; }
+
+/* line 98, ../sass/elements/_coderay-theme.scss */
+.regexp .delimiter { color: #440044; }
+
+/* line 99, ../sass/elements/_coderay-theme.scss */
+.regexp .modifier { color: #cc22cc; }
+
+/* line 100, ../sass/elements/_coderay-theme.scss */
+.reserved { color: #080; font-weight: bold; }
+
+/* line 102, ../sass/elements/_coderay-theme.scss */
+.shell .content { color: #22bb22; }
+
+/* line 103, ../sass/elements/_coderay-theme.scss */
+.shell .delimiter { color: #116611; }
+
+/* line 105, ../sass/elements/_coderay-theme.scss */
+.string .char { color: #ff7373; }
+
+/* line 106, ../sass/elements/_coderay-theme.scss */
+.string .content { color: #ff7373; }
+
+/* line 107, ../sass/elements/_coderay-theme.scss */
+.string .delimiter { color: #ff7373; }
+
+/* line 108, ../sass/elements/_coderay-theme.scss */
+.string .modifier { color: #ff7373; }
+
+/* line 109, ../sass/elements/_coderay-theme.scss */
+.symbol { color: #aa6600; }
+
+/* line 110, ../sass/elements/_coderay-theme.scss */
+.symbol .content { color: #aa6600; }
+
+/* line 111, ../sass/elements/_coderay-theme.scss */
+.symbol .delimiter { color: #774400; }
+
+/* line 112, ../sass/elements/_coderay-theme.scss */
+.tag { color: #2983fb; font-weight: bold; }
+
+/* line 113, ../sass/elements/_coderay-theme.scss */
+.type { color: #339; font-weight: bold; }
+
+/* line 114, ../sass/elements/_coderay-theme.scss */
+.value { color: #008888; }
+
+/* line 115, ../sass/elements/_coderay-theme.scss */
+.variable { color: #003377; }
+
+/* line 116, ../sass/elements/_coderay-theme.scss */
+.insert { background: rgba(0, 255, 0, 0.12); }
+
+/* line 117, ../sass/elements/_coderay-theme.scss */
+.delete { background: rgba(255, 0, 0, 0.12); }
+
+/* line 118, ../sass/elements/_coderay-theme.scss */
+.change { color: #bbf; background: #000077; }
+
+/* line 119, ../sass/elements/_coderay-theme.scss */
+.head { color: #f8f; background: #550055; }
+
+/* line 120, ../sass/elements/_coderay-theme.scss */
+.head .filename { color: white; }
+
+/* line 121, ../sass/elements/_coderay-theme.scss */
+.delete .eyecatcher { background-color: rgba(255, 0, 0, 0.2); border: 1px solid rgba(230, 0, 0, 0.5); margin: -1px; border-bottom: none; border-top-left-radius: 5px; border-top-right-radius: 5px; }
+
+/* line 125, ../sass/elements/_coderay-theme.scss */
+.insert .eyecatcher { background-color: rgba(0, 255, 0, 0.2); border: 1px solid rgba(0, 128, 0, 0.5); margin: -1px; border-top: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; }
+
+/* line 129, ../sass/elements/_coderay-theme.scss */
+.insert .insert { color: #0c0; background: transparent; font-weight: bold; }
+
+/* line 130, ../sass/elements/_coderay-theme.scss */
+.delete .delete { color: #c00; background: transparent; font-weight: bold; }
+
+/* line 131, ../sass/elements/_coderay-theme.scss */
+.change .change { color: #8888ff; }
+
+/* line 132, ../sass/elements/_coderay-theme.scss */
+.head .head { color: #ff44ff; }
+
+/* line 3, ../sass/elements/_source-highlighting.scss */
 pre.CodeRay.highlight { border: solid 2px #d0d3d4; border-radius: 5px; }
-/* line 4, ../sass/elements/_source-highlighting.scss */
+/* line 6, ../sass/elements/_source-highlighting.scss */
 pre.CodeRay.highlight > code { font-family: 'Ubuntu Mono', monospace; font-size: 0.8em; }
 
-/* line 10, ../sass/elements/_source-highlighting.scss */
-.listingblock code[data-lang]::before { display: block; font-family: 'Ubuntu Mono', monospace; background-color: #d0d3d4; color: #2983fb; font-size: 1rem; font-weight: bold; border-top-right-radius: 5px; border-bottom-left-radius: 5px; top: 1px; right: 1px; padding: 3px 5px; opacity: 0.75; }
+/* line 12, ../sass/elements/_source-highlighting.scss */
+.listingblock code[data-lang]::before { display: block; font-family: 'Ubuntu Mono', monospace; background-color: #d0d3d4; color: #2983fb; font-size: 1rem; font-weight: bold; border-top-right-radius: 5px; border-bottom-left-radius: 5px; top: 1px; right: 1px; padding: 3px 5px; opacity: unset !important; }
