--- a/content/css/main.css
+++ b/content/css/main.css
@@ -1192,34 +1192,37 @@ p { margin-bottom: 1.25rem; }
   #footer-text { color: rgba(0, 0, 0, 0.6); font-size: 0.9em; } }
 @media amzn-kf8 { /* line 136, ../../style/sass/components/_print.scss */
   #header, #content, #footnotes, #footer { padding: 0; } }
+/* line 62, ../../style/sass/main.scss */
+body { overscroll-behavior: none; }
+
 /* hide global headline which appears on all pages */
-/* line 64, ../../style/sass/main.scss */
+/* line 68, ../../style/sass/main.scss */
 div#header > h1 { display: none; }
 
 /* increase size of h2, h3, h4, h5, relative to now missing h1 */
-@media only screen and (min-width: 768px) { /* line 69, ../../style/sass/main.scss */
+@media only screen and (min-width: 768px) { /* line 73, ../../style/sass/main.scss */
   h2 { font-size: 2.75em; }
-  /* line 70, ../../style/sass/main.scss */
+  /* line 74, ../../style/sass/main.scss */
   h3, #toctitle, .sidebarblock > .content > .title { font-size: 2.3125em; }
-  /* line 71, ../../style/sass/main.scss */
+  /* line 75, ../../style/sass/main.scss */
   h4, #toctitle, .sidebarblock > .content > .title { font-size: 1.6875em; }
-  /* line 72, ../../style/sass/main.scss */
+  /* line 76, ../../style/sass/main.scss */
   h5 { font-size: 1.4375em; } }
-/* line 79, ../../style/sass/main.scss */
+/* line 83, ../../style/sass/main.scss */
 h1 > a.link:hover, h2 > a.link:hover, h3 > a.link:hover, #toctitle > a.link:hover, .sidebarblock > .content > .title > a.link:hover, h4 > a.link:hover, h5 > a.link:hover, h6 > a.link:hover { color: #ff7373; }
 
-/* line 87, ../../style/sass/main.scss */
+/* line 91, ../../style/sass/main.scss */
 a:hover { color: #ff7373; }
 
-/* line 93, ../../style/sass/main.scss */
+/* line 97, ../../style/sass/main.scss */
 ul, ol, dl { font-size: 1em; line-height: 1.6; margin-bottom: 1.25em; list-style-position: outside; font-family: inherit; }
 
-/* line 103, ../../style/sass/main.scss */
+/* line 107, ../../style/sass/main.scss */
 body#Home > #footer { display: block; }
 
-/* line 104, ../../style/sass/main.scss */
+/* line 108, ../../style/sass/main.scss */
 #footer { display: none; /* hide by default, show only on home page */ background-color: rgba(0, 0, 0, 0.05); }
-/* line 107, ../../style/sass/main.scss */
+/* line 111, ../../style/sass/main.scss */
 #footer #footer-text { color: #a2aaad; text-align: right; }
 
 /* line 4, ../../style/sass/elements/_default.scss */
