--- a/content/css/main.css
+++ b/content/css/main.css
@@ -1195,34 +1195,41 @@ p { margin-bottom: 1.25rem; }
 /* line 62, ../../style/sass/main.scss */
 body { overscroll-behavior: none; }
 
+/* line 66, ../../style/sass/main.scss */
+div#content { min-height: 100vh; }
+
 /* hide global headline which appears on all pages */
-/* line 68, ../../style/sass/main.scss */
+/* line 72, ../../style/sass/main.scss */
 div#header > h1 { display: none; }
 
 /* increase size of h2, h3, h4, h5, relative to now missing h1 */
-@media only screen and (min-width: 768px) { /* line 73, ../../style/sass/main.scss */
+@media only screen and (min-width: 768px) { /* line 77, ../../style/sass/main.scss */
   h2 { font-size: 2.75em; }
-  /* line 74, ../../style/sass/main.scss */
+  /* line 78, ../../style/sass/main.scss */
   h3, #toctitle, .sidebarblock > .content > .title { font-size: 2.3125em; }
-  /* line 75, ../../style/sass/main.scss */
+  /* line 79, ../../style/sass/main.scss */
   h4, #toctitle, .sidebarblock > .content > .title { font-size: 1.6875em; }
-  /* line 76, ../../style/sass/main.scss */
+  /* line 80, ../../style/sass/main.scss */
   h5 { font-size: 1.4375em; } }
-/* line 83, ../../style/sass/main.scss */
-h1 > a.link:hover, h2 > a.link:hover, h3 > a.link:hover, #toctitle > a.link:hover, .sidebarblock > .content > .title > a.link:hover, h4 > a.link:hover, h5 > a.link:hover, h6 > a.link:hover { color: #ff7373; }
+/* line 86, ../../style/sass/main.scss */
+h1 > a:hover, h2 > a:hover, h3 > a:hover, #toctitle > a:hover, .sidebarblock > .content > .title > a:hover, h4 > a:hover, h5 > a:hover, h6 > a:hover { color: #002846; }
+/* line 90, ../../style/sass/main.scss */
+h1 > a.anchor, h2 > a.anchor, h3 > a.anchor, #toctitle > a.anchor, .sidebarblock > .content > .title > a.anchor, h4 > a.anchor, h5 > a.anchor, h6 > a.anchor { display: none; }
+/* line 96, ../../style/sass/main.scss */
+h1 > a.link:hover::after, h2 > a.link:hover::after, h3 > a.link:hover::after, #toctitle > a.link:hover::after, .sidebarblock > .content > .title > a.link:hover::after, h4 > a.link:hover::after, h5 > a.link:hover::after, h6 > a.link:hover::after { font-family: "FontAwesome"; content: "\f0c1" !important; line-height: inherit; font-size: smaller; padding-left: 10px; }
 
-/* line 91, ../../style/sass/main.scss */
+/* line 110, ../../style/sass/main.scss */
 a:hover { color: #ff7373; }
 
-/* line 97, ../../style/sass/main.scss */
+/* line 116, ../../style/sass/main.scss */
 ul, ol, dl { font-size: 1em; line-height: 1.6; margin-bottom: 1.25em; list-style-position: outside; font-family: inherit; }
 
-/* line 107, ../../style/sass/main.scss */
+/* line 126, ../../style/sass/main.scss */
 body#Home > #footer { display: block; }
 
-/* line 108, ../../style/sass/main.scss */
+/* line 127, ../../style/sass/main.scss */
 #footer { display: none; /* hide by default, show only on home page */ background-color: rgba(0, 0, 0, 0.05); }
-/* line 111, ../../style/sass/main.scss */
+/* line 130, ../../style/sass/main.scss */
 #footer #footer-text { color: #a2aaad; text-align: right; }
 
 /* line 4, ../../style/sass/elements/_default.scss */
@@ -1253,7 +1260,7 @@ button.secondary, button.close { color: #ff7373; border: 1px solid #ff7373; }
 /* line 23, ../../style/sass/pages/_startpage.scss */
 .openblock.startpage-block table.tableblock { border: 0; vertical-align: middle; }
 /* line 25, ../../style/sass/pages/_startpage.scss */
-.openblock.startpage-block table.tableblock > tbody tr, .openblock.startpage-block table.tableblock > tbody td { border: 0; background-color: #fff; padding: 30px; -webkit-transition: all 0.4s ease-in-out; -moz-transition: all 0.4s ease-in-out; -ms-transition: all 0.4s ease-in-out; -o-transition: all 0.4s ease-in-out; transition: all 0.4s ease-in-out; }
+.openblock.startpage-block table.tableblock > tbody tr, .openblock.startpage-block table.tableblock > tbody td { border: 0; background-color: white; padding: 30px; -webkit-transition: all 0.4s ease-in-out; -moz-transition: all 0.4s ease-in-out; -ms-transition: all 0.4s ease-in-out; -o-transition: all 0.4s ease-in-out; transition: all 0.4s ease-in-out; }
 /* line 33, ../../style/sass/pages/_startpage.scss */
 .openblock.startpage-block table.tableblock.signpost > tbody tr:nth-child(2) > td:nth-child(1) > div { margin-top: 68px; }
 /* line 38, ../../style/sass/pages/_startpage.scss */
@@ -1303,7 +1310,7 @@ button.secondary, button.close { color: #ff7373; border: 1px solid #ff7373; }
 /* line 150, ../../style/sass/pages/_startpage.scss */
 .openblock.startpage-block table.tableblock.tile_headline td:hover { background-color: transparent; }
 /* line 155, ../../style/sass/pages/_startpage.scss */
-.openblock.startpage-block table.tableblock > tbody td { border-bottom: 1px solid #ddd; }
+.openblock.startpage-block table.tableblock > tbody td { border-bottom: 1px solid #d0d3d4; }
 /* line 159, ../../style/sass/pages/_startpage.scss */
 .openblock.startpage-block table.tableblock > tbody tr:first-child td:first-child, .openblock.startpage-block table.tableblock > tbody tr:last-child td { border: 0; vertical-align: middle; }
 /* line 168, ../../style/sass/pages/_startpage.scss */
@@ -1314,39 +1321,42 @@ button.secondary, button.close { color: #ff7373; border: 1px solid #ff7373; }
 /* line 178, ../../style/sass/pages/_startpage.scss */
 .intro > p { font-size: 23px; }
 
-/* line 6, ../../style/sass/elements/_sample-tabs.scss */
-.xmlTabWrap, .jsonTabWrap, .nvpTabWrap { background-color: white; border: 1px solid #2983fb; border-radius: 5px; padding: 10px; margin-top: -1px; }
+/* line 7, ../../style/sass/elements/_sample-tabs.scss */
+h2.discrete.tab-content.tab, h3.discrete.tab-content.tab, .discrete.tab-content.tab#toctitle, .sidebarblock > .content > .discrete.tab-content.tab.title, h4.discrete.tab-content.tab, h5.discrete.tab-content.tab, h6.discrete.tab-content.tab, h7.discrete.tab-content.tab { display: none; }
 
-/* line 13, ../../style/sass/elements/_sample-tabs.scss */
-.nvpTabWrap pre { white-space: pre-wrap; /* css-3 */ white-space: -moz-pre-wrap; /* Mozilla, since 1999 */ white-space: -pre-wrap; /* Opera 4-6 */ white-space: -o-pre-wrap; /* Opera 7 */ word-wrap: break-word; /* Internet Explorer 5.5+ */ }
+/* line 11, ../../style/sass/elements/_sample-tabs.scss */
+.tabs-wrapper { background-color: white; border: 1px solid #2983fb; border-radius: 5px; padding: 10px; margin-top: -1px; }
 
-/* line 21, ../../style/sass/elements/_sample-tabs.scss */
-h7.tab-content.tab-xml, h7.tab-content.tab-json, h7.tab-content.tab-nvp { display: none; }
+/* line 18, ../../style/sass/elements/_sample-tabs.scss */
+.tab-wrapper pre { white-space: pre-wrap; /* css-3 */ white-space: -moz-pre-wrap; /* Mozilla, since 1999 */ white-space: -pre-wrap; /* Opera 4-6 */ white-space: -o-pre-wrap; /* Opera 7 */ word-wrap: break-word; /* Internet Explorer 5.5+ */ }
 
-/* line 25, ../../style/sass/elements/_sample-tabs.scss */
+/* line 26, ../../style/sass/elements/_sample-tabs.scss */
+h7.tab-content.tab { display: none; }
+
+/* line 30, ../../style/sass/elements/_sample-tabs.scss */
 div.btn-samples-row { color: #2983fb; background-color: white; border: 1px solid #2983fb; border-radius: 5px; margin-bottom: 10px; }
-/* line 32, ../../style/sass/elements/_sample-tabs.scss */
+/* line 37, ../../style/sass/elements/_sample-tabs.scss */
 div.btn-samples-row button.btn-samples-tab { padding: .6em 3em .4em; background-color: white; transition: all 0.25s ease; border: none; }
-/* line 38, ../../style/sass/elements/_sample-tabs.scss */
+/* line 43, ../../style/sass/elements/_sample-tabs.scss */
 div.btn-samples-row button.btn-samples-tab.active { background-color: #2983fb; color: white; font-weight: bold; transition: all 0.25s ease; border: none; }
-/* line 45, ../../style/sass/elements/_sample-tabs.scss */
+/* line 50, ../../style/sass/elements/_sample-tabs.scss */
 div.btn-samples-row button.btn-samples-tab:hover { font-weight: bold; }
 
-/* line 54, ../../style/sass/elements/_sample-tabs.scss */
+/* line 59, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption { border-radius: 5px; }
-/* line 56, ../../style/sass/elements/_sample-tabs.scss */
+/* line 61, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption::after { content: '\f107'; font-family: FontAwesome; float: right; margin-right: .5em; }
-/* line 62, ../../style/sass/elements/_sample-tabs.scss */
+/* line 67, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption.r-details-expanded { border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; }
-/* line 65, ../../style/sass/elements/_sample-tabs.scss */
+/* line 70, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption.r-details-expanded::after { content: '\f106'; font-family: FontAwesome; }
-/* line 69, ../../style/sass/elements/_sample-tabs.scss */
+/* line 74, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption.r-details-expanded ~ thead { display: table-header-group; }
-/* line 72, ../../style/sass/elements/_sample-tabs.scss */
+/* line 77, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption.r-details-expanded ~ tbody { display: table-row-group; }
-/* line 76, ../../style/sass/elements/_sample-tabs.scss */
+/* line 81, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption ~ thead, table.r-details > caption ~ tbody { display: none; }
-/* line 80, ../../style/sass/elements/_sample-tabs.scss */
+/* line 85, ../../style/sass/elements/_sample-tabs.scss */
 table.r-details > caption.title.hide-show-enabled { font-style: normal; font-weight: bold; font-size: larger; color: white; background-color: #2983fb; border: 0; margin: 0; padding: .25em 0 .2em .5em; cursor: pointer; }
 
 /* line 3, ../../style/sass/elements/_global-toc.scss */
@@ -1354,13 +1364,13 @@ table.r-details > caption.title.hide-show-enabled { font-style: normal; font-wei
 /* line 5, ../../style/sass/elements/_global-toc.scss */
 #toc.toc2 > ul { background-position-x: right; }
 /* line 12, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 a { color: #fff; }
+#toc.toc2 a { color: white; }
 /* line 18, ../../style/sass/elements/_global-toc.scss */
 #toc.toc2 ul { margin: 0; }
 /* line 21, ../../style/sass/elements/_global-toc.scss */
 #toc.toc2 ul ul { padding: 0; }
 /* line 26, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 li[data-level="1"] > input[type="checkbox"] + label > a { background-color: rgba(2, 2, 2, 0.2); padding-left: 1em; font-weight: bold; }
+#toc.toc2 li[data-level="1"] > input[type="checkbox"] + label > a { background-color: rgba(0, 0, 0, 0.2); padding-left: 1em; font-weight: bold; }
 /* line 31, ../../style/sass/elements/_global-toc.scss */
 #toc.toc2 li[data-level="2"] > input[type="checkbox"] + label > a { padding-left: 2em; }
 /* line 34, ../../style/sass/elements/_global-toc.scss */
@@ -1370,17 +1380,17 @@ table.r-details > caption.title.hide-show-enabled { font-style: normal; font-wei
 /* line 45, ../../style/sass/elements/_global-toc.scss */
 #toc.toc2 input[type="checkbox"] + label > a { width: 100%; display: inline-block; padding-top: 0.5em; padding-bottom: 0.5em; font-size: 1.2em; }
 /* line 53, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 input[type="checkbox"] + label > a:hover { background-color: rgba(2, 2, 2, 0.05); color: #8EE6FF; transition: background-color 0.5s ease-out; }
+#toc.toc2 input[type="checkbox"] + label > a:hover { background-color: rgba(0, 0, 0, 0.05); color: #8ee6ff; transition: background-color 0.5s ease-out; }
 /* line 60, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 input[type="checkbox"]:checked + label > a { border-left: 0.1em solid #fff; background-color: rgba(2, 2, 2, 0.12); font-weight: bold; }
+#toc.toc2 input[type="checkbox"]:checked + label > a { border-left: 0.1em solid white; background-color: rgba(0, 0, 0, 0.12); font-weight: bold; }
 /* line 67, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 li[data-level="1"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid #FF7373; background-color: rgba(255, 255, 255, 0.08); }
+#toc.toc2 li[data-level="1"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid #ff7373; background-color: rgba(255, 255, 255, 0.08); }
 /* line 73, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 li[data-level="2"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid #8EE6FF; background-color: rgba(255, 255, 255, 0.05); }
+#toc.toc2 li[data-level="2"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid #8ee6ff; background-color: rgba(255, 255, 255, 0.05); }
 /* line 79, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 li[data-level="3"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid #000; background-color: rgba(255, 255, 255, 0.04); }
+#toc.toc2 li[data-level="3"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid black; background-color: rgba(255, 255, 255, 0.04); }
 /* line 85, ../../style/sass/elements/_global-toc.scss */
-#toc.toc2 li[data-level="4"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid #000; background-color: rgba(255, 255, 255, 0.03); }
+#toc.toc2 li[data-level="4"] > input[type="checkbox"]:checked + label > a { border-left: 0.1em solid black; background-color: rgba(255, 255, 255, 0.03); }
 /* line 91, ../../style/sass/elements/_global-toc.scss */
 #toc.toc2 li[data-level="5"] { display: none; }
 /* line 96, ../../style/sass/elements/_global-toc.scss */
@@ -1402,7 +1412,7 @@ body.no-scroll { overflow: hidden; }
 
 /* SEARCH FIELD */
 /* line 12, ../../style/sass/elements/_search.scss */
-input#search { display: block; width: 85%; border-radius: 5px; border: 1px solid #425563; padding: 0.5em; font-size: 1em; box-sizing: unset; margin: auto; background-color: rgba(0, 0, 0, 0.1); color: #fff; margin-bottom: 1em; }
+input#search { display: block; width: 85%; border-radius: 5px; border: 1px solid #425563; padding: 0.5em; font-size: 1em; box-sizing: unset; margin: auto; background-color: rgba(0, 0, 0, 0.1); color: white; margin-bottom: 1em; }
 /* line 13, ../../style/sass/elements/_search.scss */
 input#search:hover { cursor: pointer; }
 
