--- a/content/css/main.css
+++ b/content/css/main.css
@@ -1450,7 +1450,7 @@ input#search:hover { cursor: pointer; }
 
 /* CLOSE BUTTON */
 /* line 30, ../../style/sass/elements/_search.scss */
-#btn-search-close { display: none; position: fixed; top: 1.5em; right: 1.5em; color: white; font-size: 1.2em; background-color: #ff7373; height: 2em; width: 2em; cursor: pointer; }
+#btn-search-close { display: block; position: absolute; top: 3em; right: 26em; color: white; font-size: 1.2em; background-color: #ff7373; height: 2em; width: 2em; cursor: pointer; }
 /* line 41, ../../style/sass/elements/_search.scss */
 #btn-search-close:hover { background-color: white; color: #ff7373; }
 
@@ -1476,42 +1476,28 @@ span.nav-key { border: 1px solid #425563; border-radius: 3px; padding: 3px 5px; 
 /* line 87, ../../style/sass/elements/_search.scss */
 span.nav-text { color: #425563; font-size: 1.2rem; line-height: 1.2rem; }
 
-/* OVERLAY */
-/* line 94, ../../style/sass/elements/_search.scss */
-#search-overlay { /* END &.open */ }
-/* line 95, ../../style/sass/elements/_search.scss */
-#search-overlay.open { /* CLOSE BUTTON */ /* SEARCH WRAPPER */ /* END SEARCH WRAPPER */ }
-/* line 97, ../../style/sass/elements/_search.scss */
-#search-overlay.open #btn-search-close { display: block; z-index: 2; }
-/* line 102, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper { /* SEARCH RESULTS WRAPPER */ /* END SEARCH RESULTS WRAPPER */ /* FIXME does not look good, therefore disabled */ /* INSTRUCTIONS */ }
-/* line 104, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper { position: fixed; top: 0; padding-left: 10em; padding-top: 1em; background-color: white; overflow: scroll; height: 100vh; /* SEARCH RESULTS */ /* END SEARCH RESULTS */ }
-@media only screen and (min-width: 768px) { /* line 104, ../../style/sass/elements/_search.scss */
-  #search-overlay.open #search-wrapper #search-results-wrapper { left: 15em; width: calc(100% - 15em); } }
-@media only screen and (min-width: 1280px) { /* line 104, ../../style/sass/elements/_search.scss */
-  #search-overlay.open #search-wrapper #search-results-wrapper { left: 20em; width: calc(100% - 20em); } }
-/* line 122, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results { display: block; list-style: none; max-width: 62.5em; width: 75%; margin-bottom: 150px; }
+/* line 93, ../../style/sass/elements/_search.scss */
+#search-results-wrapper { display: none; z-index: 1; position: fixed; top: 0; background-color: white; overflow: scroll; height: 100vh; width: 82.5em; padding-left: 0.9375em; padding-right: 16em; margin-left: auto; margin-right: auto; /* SEARCH RESULTS */ /* END SEARCH RESULTS */ }
+/* line 107, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results { display: block; list-style: none; max-width: 62.5em; width: 75%; margin-bottom: 150px; }
+/* line 120, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results li { display: block; margin-bottom: 10px; }
 /* line 123, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results::before { content: 'Search Results'; font-size: 3em; margin-bottom: 0.5em; display: block; border-bottom: 3px solid #002846; }
-/* line 135, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li { display: block; margin-bottom: 10px; }
-/* line 138, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div { width: inherit; border-radius: 15px; position: relative; border: 1px solid #425563; }
-/* line 144, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div * { margin: 0px; text-decoration: none; }
-/* line 149, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div a h3, #search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div a #toctitle, #search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div a .sidebarblock > .content > .title, #search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div a p { margin-left: 40px; margin-right: 40px; margin-top: 10px; color: #002846 !important; }
-/* line 155, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div a span.label { position: absolute; top: -1px; right: -1px; border-top-right-radius: 15px; border-bottom-left-radius: 15px; color: white; background-color: #425563; padding: 4px 10px; font-weight: bold; }
-/* line 166, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li > div a:hover { text-decoration: none; color: #002846; }
-/* line 173, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li.selected > div { border: 1px solid #2983fb; background-color: rgba(41, 131, 251, 0.2); }
-/* line 176, ../../style/sass/elements/_search.scss */
-#search-overlay.open #search-wrapper #search-results-wrapper ul#search-results li.selected > div a > span.label { background-color: #2983fb; }
+#search-results-wrapper ul#search-results li > div { width: inherit; border-radius: 15px; position: relative; border: 1px solid #425563; }
+/* line 129, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results li > div * { margin: 0px; text-decoration: none; }
+/* line 134, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results li > div a h4, #search-results-wrapper ul#search-results li > div a p { margin-left: 40px; margin-right: 40px; margin-top: 10px; color: #002846 !important; }
+/* line 140, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results li > div a span.label { position: absolute; top: -1px; right: -1px; border-top-right-radius: 15px; border-bottom-left-radius: 15px; color: white; background-color: #425563; padding: 4px 10px; font-weight: bold; }
+/* line 151, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results li > div a:hover { text-decoration: none; color: #002846; }
+/* line 158, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results li.selected > div { border: 1px solid #2983fb; background-color: rgba(41, 131, 251, 0.2); }
+/* line 161, ../../style/sass/elements/_search.scss */
+#search-results-wrapper ul#search-results li.selected > div a > span.label { background-color: #2983fb; }
 
+/* END SEARCH RESULTS WRAPPER */
 /* line 1, ../../style/sass/elements/_minitoc.scss */
 #minitoc { background-color: transparent; position: fixed; right: -4em; transition: height 500ms ease-in-out; overflow: hidden; font-size: 0.9em; width: 15em; margin-right: 5vw; z-index: 1; }
 /* line 12, ../../style/sass/elements/_minitoc.scss */
